...
    <string name="dialog_button_upload">Upload</string>
    <string name="dialog_button_download">Download</string>
    <string name="dialog_button_continue">Continue</string>
    <string name="dialog_button_settings">Settings</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="laano_tab_links_title">Links</string>
    <string name="laano_tab_favorites_title">Favorites</string>
    <string name="laano_tab_notes_title">Notes</string>
    <string name="laano_permission_get_accounts">GET ACCOUNTS (Contacts) permission is needed to show the list of existing accounts</string>
    <string name="laano_account_added">A new account has been added</string>
    <string name="laano_offline">Application offline, please enable Internet connection</string>
    <string name="laano_not_syncable">Unable to access the Cloud storage, please log in again</string>
    <string name="laano_shortcut_add_link">Add Link</string>
    <string name="laano_shortcut_add_favorite">Add Favorite</string>
...
    <string name="add_edit_note_message_link_bound_edit">bound</string>
    <string name="add_edit_note_message_link_unbound_new">unbound</string>
    <string name="add_edit_note_message_link_unbound_edit">unbound</string>
    <string name="add_edit_note_message_link_will_unbound">Unable to load related Link, this Note will be saved as unbound</string>
    <string name="action_mode_notes_delete">Delete</string>
    <string name="action_mode_notes_select_all">Select/Deselect all Notes</string>
    <string name="laano_notes_action_mode_selected">%1$d of %2$d selected</string>
    <string name="toolbar_notes_item_mode_action">Switch to Edit mode</string>
    <string name="toolbar_notes_item_expand_all">Expand all Notes</string>
    <string name="toolbar_notes_item_collapse_all">Collapse all Notes</string>
    <string name="toolbar_notes_item_clear_clipboard">Clear clipboard</string>
    <string name="toolbar_notes_item_filter">Note filter</string>
    <string name="toolbar_notes_item_mode_normal">Switch to the Normal mode</string>
    <string name="toolbar_notes_item_mode_reading">Switch to the Reading mode</string>
...
