...
                style="@style/Button.RecyclerView"
                bind:imageButtonEnabled="@{!(note.conflicted || note.linkId == null)}"
                app:srcCompat="@drawable/ic_chevron_left"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/note_note"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/note_filter_prefix" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/note_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_left_checkbox_margin_start"
                android:contentDescription="@string/item_notes_checkbox"
                android:visibility="@{viewModel.actionMode ? View.VISIBLE : View.GONE}"
                android:checked="@{viewModel.isSelected(note.id, viewModel.selectionChanged)}"
...
                app:layout_constraintTop_toTopOf="@+id/note_to_links"
                app:layout_constraintBottom_toBottomOf="@+id/note_to_links"
                app:layout_constraintStart_toEndOf="@id/note_note_caption"
                app:layout_constraintEnd_toEndOf="parent" />

            <ImageButton
                android:id="@+id/note_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/item_notes_edit_button"
                android:paddingTop="@dimen/card_button_padding_vertical"
                android:paddingBottom="@dimen/card_button_padding_vertical"
                android:paddingStart="@dimen/card_button_padding"
...
