...
        android:id="@+id/snackbar_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        bind:snackbarId="@{viewModel.snackbarId}">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="@{viewModel.listEmpty ? View.GONE : View.VISIBLE}" />

        <TextView
...
